@@ -1,6 +1,6 @@
 Package: artdeco
 Title: Alikeness Based on Regression on Transciptome DECOnvolution
-Version: 0.99.3
+Version: 0.99.r
 Authors@R: c(person("Raik", "Otto", role = c("aut", "cre"), email = 'raik.otto@hu-berlin.de'))
 Description: This packages determines the similarity cancer sample
  transcriptomes to samples with known differentiation stage. Training data input 
@@ -30,7 +30,8 @@ Suggests:
     testthat,
     knitr,
     rmarkdown,
-    RUnit
+    RUnit,
+    markdown
 biocViews:
     Sequencing,
     RNASeq,
